tests/tooling/fixtures/native/recovery/negative/negative_for_parser_missing_lparen.objc3
// Expected diagnostic code(s): O3P106, O3P104, O3P100.
module NegativeForParserMissingLParen;

fn main() -> i32 {
  for let i = 0; i < 3; i = i + 1 {
    let x = i;
  }
  return 0;
}
